--- a/todo_project/templates/base.html
+++ b/todo_project/templates/base.html
@@ -1,41 +1,47 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+ 
     </head>
 
     <body>  
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lavender">
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lavender">
             <div class="container">
+
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 {% if user.is_authenticated %}
                 <a class="navbar-brand" href="{% url 'todo' %}">TODO</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item">
                             <a class="nav-item nav-link" href="{% url 'todo' %}">my todo</span></a>
                         </li>
                 {% else %}
-                <a class="navbar-brand" href="{% url 'home' %}">TODO</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                        <ul class="navbar-nav ml-auto">
-               {% endif %}
+                    <a class="navbar-brand" href="{% url 'home' %}">TODO</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    </ul>
+                </div>
+                {% endif %}
 
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <ul class="navbar-nav ml-auto">
                         {% if user.is_authenticated %}
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">환영합니다. {{ user.username }} 님!</a>
+                            aria-haspopup="true" aria-expanded="false">{{ user.username }} 님 환영합니다.</a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="{% url 'new' %}">글쓰기</a>
                                 <a class="dropdown-item" href="javascript:{document.getElementById('logout').submit()}">Logout</a>
                                 <form id="logout" method="POST" action="{% url 'logout' %}">
                                     {% csrf_token %} <input type="hidden" />
@@ -57,7 +63,13 @@
 
         {% block contents %}
         {% endblock %}
+        
+
+        <footer class="footer mt-auto py-3" style="background-color: lavender;">
+            <div class="container">
+                <span class="text-muted">멋쟁이사자처럼 At 경기대팀</span>
+            </div>  
+        </footer>
 
     </body>
-
 </html>
