--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -1,21 +1,34 @@
 {% extends 'base.html' %}
 
 {% block contents %}
-
-{% for todo in todos.all %}
-{% if todo.username == current_user %}
-<div class="container">
-    <br>
-    <div class="card">
-        <div class="card-body">
-            <p class="card-text">{{todo.item}}</p>
-            <a href="{% url 'edit' todo.id %}" type="button" class="btn" style="background-color: palevioletred; color:whitesmoke">edit</a>
-            <a href="{% url 'destroy' todo.id %}" type="button" class="btn" style="background-color: plum; color:whitesmoke">delete</a>
-        </div>
+<div class="container pt-3">
+    <div class="jumbotron" style ="background-color: thistle;">
+        <h1 class="display-4">Hello, TODO world!</h1>
+        <p class="lead">오늘의 할 일을 등록해보세요.</p>
+        <hr class="my-4">
+        <a href="{% url 'new' %}" type="button" class="btn" style="background-color: palevioletred; color:whitesmoke">글쓰기</a>
     </div>
 </div>
-<br>
-{% endif %}
-{% endfor %}
+<div class="container">
+    {% for todo in todos.all %}
+    <div class="card mb-4">
+        <div class="card-body">
+            <div class="row">
+                <div class="form-check col align-self-start pl-5">
+                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck{{todo.id}}">
+                    <label class="form-check-label" for="defaultCheck{{todo.id}}">
+                        <h3>{{todo.item}}</h3>
+                    </label>
+                </div>
+                <div class="col align-self-end text-right">
+                    <a href="{% url 'edit' todo.id %}" type="button" class="btn" style="background-color: palevioletred; color:whitesmoke">edit</a>
+                    <a href="{% url 'destroy' todo.id %}" type="button" class="btn" style="background-color: plum; color:whitesmoke">delete</a>
+                </div>    
+            </div>
+        </div>
+    </div>
+    {% endfor %}   
+
+</div>
 
 {% endblock %}
