--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -11,6 +11,7 @@
 </div>
 <div class="container">
     {% for todo in todos.all %}
+    {% if todo.username == current_user %}
     <div class="card mb-4">
         <div class="card-body">
             <div class="row">
@@ -27,6 +28,7 @@
             </div>
         </div>
     </div>
+    {% endif %}
     {% endfor %}   
 
 </div>
