--- a/todolist/templates/todo.html
+++ b/todolist/templates/todo.html
@@ -11,26 +11,40 @@
 </div>
 <div class="container">
     {% for todo in todos.all %}
-    {% if todo.username == current_user %}
-    <div class="card mb-4">
-        <div class="card-body">
-            <div class="row">
-                <div class="form-check col align-self-start pl-5">
-                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck{{todo.id}}">
-                    <label class="form-check-label" for="defaultCheck{{todo.id}}">
-                        <h3>{{todo.item}}</h3>
-                    </label>
+        {% if todo.username == current_user %}
+        <div class="card mb-4">
+            <div class="card-body">
+                <div class="row">
+                    <div class="form-check col align-self-start pl-5">    
+                        <input class="form-check-input" type="checkbox" style="display:none;" value="" id="{{todo.id}}" onclick="check(this)">
+                        <label class="form-check-label row" for="{{todo.id}}">
+                            <i class="far fa-circle fa-2x mr-2" id="icon{{todo.id}}"></i>
+                            <h3>{{todo.item}}</h3>
+                        </label>
+                    </div>
+                    <div class="col align-self-end text-right">
+                        <a href="{% url 'edit' todo.id %}" type="button" class="btn" style="background-color: palevioletred; color:whitesmoke">edit</a>
+                        <a href="{% url 'destroy' todo.id %}" type="button" class="btn" style="background-color: plum; color:whitesmoke">delete</a>
+                    </div>    
                 </div>
-                <div class="col align-self-end text-right">
-                    <a href="{% url 'edit' todo.id %}" type="button" class="btn" style="background-color: palevioletred; color:whitesmoke">edit</a>
-                    <a href="{% url 'destroy' todo.id %}" type="button" class="btn" style="background-color: plum; color:whitesmoke">delete</a>
-                </div>    
             </div>
         </div>
-    </div>
-    {% endif %}
+        {% endif %}
     {% endfor %}   
 
 </div>
+<script>
+function check(test) {
+    var getId = test.id;
+    var checkBox = document.getElementById(getId);
+    var iconId = "icon" + getId
+    var icon = document.getElementById(iconId);
+    if (checkBox.checked == true){
+        icon.className = "far fa-check-circle fa-2x mr-2";
+    } else {
+        icon.className = "far fa-circle fa-2x mr-2";
+    }
+}
+</script>
 
 {% endblock %}
